--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               <nav>
                 <ul>
                   <li><a href="Barbearia Alura">Home</a></li>
-                  <li><a href="produtos.html">Produtos</a></li>
+                  <li><a href="https://engelmannmarcos.github.io/Alura-Produtos/index.htmlprodutos.html">Produtos</a></li>
                   <li><a href="http://www.google.com">Contato</a></li>
                 </ul>
                   </nav>
