--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <ul>
                   <li><a href="https://engelmannmarcos.github.io/Alura-Barbearia/index.html">Home</a></li>
                   <li><a href="https://engelmannmarcos.github.io/Alura-Produtos/index.html">Produtos</a></li>
-                  <li><a href="http://www.google.com">Contato</a></li>
+                  <li><a href="http://www.google.com/maps/">Contato</a></li>
                 </ul>
                   </nav>
             </header>
