--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="produtos.css">
         <body>
           <header>
+            <div class="caixa">
               <h1><img src="https://cdn1.gnarususercontent.com.br/1/1125050/6e04bde8-5872-4d1d-8f26-fdb181dfaced.png"></h1>
               <nav>
                 <ul>
@@ -13,7 +14,37 @@
                   <li><a href="https://engelmannmarcos.github.io/Alura-Produtos/index.html">Produtos</a></li>
                   <li><a href="http://www.google.com/maps/">Contato</a></li>
                 </ul>
+                </div>
+                </nav>
                   </nav>
             </header>
+            <main>
+              <ul class="produtos">
+                <li>
+                  <h2>Cabelo</h2>
+                    <img src="https://angelicaalbuquerque.github.io/barbearia_alura/cabelo.jpg">
+                    <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+                    <p class="produto-preco">R$ 25,00</p>
+                    </li>
+                
+                 <li>
+                   <h2>Barba</h2>
+                    <img src="https://angelicaalbuquerque.github.io/barbearia_alura/barba.jpg">
+                   <p class="produto-descricao">Corte e desenho profissional de barba</p>
+                    <p class="produto-preco">R$ 18,00</p>
+                    </li>
+                
+                 <li>
+                   <h2>Cabelo + Barba</h2>
+                    <img src="https://angelicaalbuquerque.github.io/barbearia_alura/cabelo+barba.jpg">
+                   <p class="produto-descricao">Pacote completo de barba e cabelo</p>
+                    <p class="produto-preco">R$ 35,00</p>
+                    </li>
+              </ul>
+          </main>
+          <footer>
+            <img src="https://cdn1.gnarususercontent.com.br/1/905642/8a56fc6e-66af-4b03-9180-f2195f7b9983.png">
+            <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+          </footer>
           </body>
         </html>
