--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <ul>
                   <li><a href="https://engelmannmarcos.github.io/Alura-Barbearia/index.html">Home</a></li>
                   <li><a href="https://engelmannmarcos.github.io/Alura-Produtos/index.html">Produtos</a></li>
-                  <li><a href="http://www.google.com/maps/">Contato</a></li>
+                  <li><a href="https://engelmannmarcos.github.io/Contato/">Contato</a></li>
                 </ul>
                 </div>
                 </nav>
